# FCL-to-UPN-CSV-Converter

./: .gitignore  README.md  WORKSPACE.bazel
resources/companies/forward_office/: BUILD.bazel
resources/companies/forward_office/dashboard_formats/: BUILD.bazel  short_codes.json
resources/companies/upn/: BUILD.bazel
resources/companies/upn/api/: BUILD.bazel
resources/companies/upn/api/consignments/: BUILD.bazel
resources/companies/upn/api/data_types/: BUILD.bazel
resources/companies/upn/api/pallets/: BUILD.bazel
resources/companies/upn/api_structures/: primitives.json
resources/companies/upn/export_mappings/: main_services.json
resources/companies/upn/export_profiles/: graylaw_to_upn.json
resources/companies/upn/system_import/: BUILD.bazel
src/main/companies/: BUILD.bazel
src/main/companies/bridges/: BUILD.bazel
src/main/companies/bridges/graylaw/: BUILD.bazel
src/main/companies/bridges/graylaw_forward_office/: BUILD.bazel
src/main/companies/bridges/graylaw_upn/: BUILD.bazel
src/main/companies/forward_office/: BUILD.bazel
src/main/companies/forward_office/references/: BUILD.bazel
src/main/companies/graylaw/: BUILD.bazel
src/main/companies/graylaw/services/: BUILD.bazel
src/main/companies/upn/: BUILD.bazel
src/main/companies/upn/address/: BUILD.bazel
src/main/companies/upn/api/: BUILD.bazel
src/main/companies/upn/consignments/: BUILD.bazel
src/main/companies/upn/database/: BUILD.bazel  pallets.py  services.py
src/main/companies/upn/freight/: BUILD.bazel
src/main/companies/upn/implementations/: BUILD.bazel  customer.py  dates.py
src/main/companies/upn/interfaces/: BUILD.bazel  address.py  cargo.py  consignments.py  cust_pallet.py  customer.py  network_consignment.py  network_pallet.py  pallets.py  references.py  services.py
src/main/companies/upn/model/: BUILD.bazel
src/main/companies/upn/system_import/: BUILD.bazel
src/main/companies/upn/time/: BUILD.bazel
src/main/file_system/: BUILD.bazel  api_files.py  dashboard_format_files.py  runfiles.py  system_files.py  system_paths.py
src/main/file_system/companies/: BUILD.bazel
src/main/file_system/companies/forward_office/: BUILD.bazel  dashboards.py  freight_mappings.py
src/main/file_system/companies/graylaw/: BUILD.bazel  cargo_types.py  oversize_options.py
src/main/file_system/companies/upn/: BUILD.bazel  _api.py  api.py  configuration.py  system_import.py
src/main/file_system/file_contents/: BUILD.bazel  api_files.py  cargo_types.py  dashboard_format_files.py  forward_office.py  oversize_options.py  system_files.py  upn.py
src/main/file_system/file_contents/forward_office/: BUILD.bazel  dashboards.py  freight_mappings.py
src/main/file_system/file_contents/freight/: BUILD.bazel  cargo_types.py
src/main/file_system/file_contents/upn/: BUILD.bazel
src/main/file_system/file_readers/: BUILD.bazel  json_file.py  json_to_dataclass.py  runfiles.py  system_files.py
src/main/file_system/forward_office/: BUILD.bazel  dashboards.py  freight_mappings.py
src/main/file_system/freight/: BUILD.bazel  cargo_types.py  oversize_options.py
src/main/file_system/graylaw/: BUILD.bazel  cargo_types.py  oversize_options.py
src/main/file_system/upn/: BUILD.bazel
src/main/file_system/upn/api/: BUILD.bazel  (+1 more)
src/main/forward_office/cargo/: BUILD.bazel  type_mappings.py
src/main/forward_office/dashboard/: BUILD.bazel  cargo_type_mappings.py  formats.py
src/main/forward_office/dashboard_fields/: BUILD.bazel  upn_edi_imp.py
src/main/forward_office/mapping/: BUILD.bazel  cargo.py  service.py
src/main/freight/: BUILD.bazel
src/main/freight/address/: BUILD.bazel  interface.py  model.py  validation.py
src/main/freight/cargo/: BUILD.bazel  entry.py  model.py  oversize_options.py  package_types.py  types.py
src/main/freight/consignment/: BUILD.bazel  address.py  consignment.py  implementation.py  interface.py  model.py  validation.py
src/main/freight/dates/: BUILD.bazel  format_recognition.py  model.py  transforms.py
src/main/freight/reference/: BUILD.bazel
src/main/freight/references/: BUILD.bazel  factory.py  implementation.py  interface.py  model.py
src/main/freight/service/: BUILD.bazel  model.py  options.py  types.py  validation.py
src/main/freight/services/: BUILD.bazel  model.py  types.py  validation.py
src/main/freight/shipment_dates/: BUILD.bazel  implementation.py  interface.py  model.py  transforms.py  validation.py
src/main/graylaw/: BUILD.bazel
src/main/graylaw/address/: model.py
src/main/graylaw/cargo/: BUILD.bazel
src/main/graylaw/consignment/: BUILD.bazel  interface.py  model.py  validation.py
src/main/graylaw/references/: consignment_reference.py  factory.py  interface.py  model.py  references.py
src/main/graylaw/service/: model.py  validation.py
src/main/graylaw/shipment_dates/: BUILD.bazel  implementation.py  interface.py  model.py
src/main/third_party_bridges/graylaw_forward_office/: BUILD.bazel
src/main/time/dates/: BUILD.bazel
src/main/upn/api/: BUILD.bazel  client.py  consignment.py  mapping_structures.py  model.py  parser.py  reports.py  structures.py
src/main/upn/consignment/: BUILD.bazel
src/main/upn/consignments/: BUILD.bazel  address.py  cargo.py  customer.py  dates.py  references.py  services.py
src/main/upn/freight/: BUILD.bazel
src/test/csv/: BUILD.bazel  consignment_parser.py  fcl.py  fcl_format_reader.py  fcl_model.py  fcl_parser.py  parser.py  reader.py
src/test/file_system/: BUILD.bazel  formats.py  system_files.py  system_paths.py
src/test/file_system/file_contents/: upn.py
src/test/file_system/file_readers/: BUILD.bazel  csv_file.py
src/test/file_system/forward_office/: BUILD.bazel  dashboards.py
src/test/file_system/upn/: BUILD.bazel  upn.py
src/test/forward_office/dashboard/: BUILD.bazel  cargo_type_mappings.py  formats.py
src/test/forward_office/mapping/: BUILD.bazel  cargo.py  service.py
src/test/freight/cargo/: BUILD.bazel  cargo.py  entry.py  oversize_options.py  package_types.py
src/test/freight/consignment/: BUILD.bazel  address.py  cargo.py  reference.py  validation.py
(+1415 files in other folders)
