load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_system",
    srcs = glob(["*.py"]),
    data = [
        "//resources:file_system.json",
        "//resources/forward_office:dashboard_format_files.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system/file_readers",
        "@rules_python//python/runfiles",
    ],
)
