load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_system",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system/file_readers",
        "//src/main/file_system/forward_office",
        "//src/main/file_system/graylaw",
        "//src/main/file_system/upn",
    ],
)
