load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "freight",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight/address",
        "//src/main/freight/cargo",
        "//src/main/freight/consignment",
        "//src/main/freight/references",
        "//src/main/freight/service",
        "//src/main/freight/shipment_dates",
    ],
)
