load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "graylaw",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/graylaw/address",
        "//src/main/graylaw/cargo",
        "//src/main/graylaw/consignment",
        "//src/main/graylaw/references",
        "//src/main/graylaw/service",
    ],
)
