load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "system_files",
    srcs = glob(["*.py"]),
    data = ["//resources/test_inputs"],
    deps = [
        "//src/main/file_system",
    ],
)

py_test(
    name = "formats",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/file_system",
    ],
)
