load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "forward_office",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/companies/forward_office/references",
    ],
)
