load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "upn",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/companies/upn/api",
        "//src/main/companies/upn/database",
        "//src/main/companies/upn/system_import",
    ],
)
