load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_contents",
    srcs = glob(["*.py"]),
    data = [
        "//config/api",
        "//resources:file_system",
        "//resources/forward_office/dashboard_formats",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system/file_readers",
    ],
)
