load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_contents",
    srcs = glob(["*.py"]),
    data = [
        "//resources:file_system",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system/file_contents/forward_office",
        "//src/main/file_system/file_contents/freight",
        "//src/main/file_system/file_contents/upn",
        "//src/main/file_system/file_readers",
    ],
)
