load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "cargo",
    srcs = glob(["*.py"]),
    data = [
        "//resources/forward_office:cargo_type_mappings.json",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)
