load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "dashboard",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system",
        requirement("dataclasses")
    ],
    data = [
        "//resources/forward_office/formats:upn_edi_imp.json"
    ]
)
