load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "dashboard",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/file_system",
        "//src/main/freight",
    ],
    data = [
        "//resources/forward_office:cargo_type_mappings.json",
        "//resources/forward_office/formats:upn_edi_imp.json"
    ]
)
