load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "dashboard",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/forward_office/dashboard/format",
        "//src/main/forward_office/dashboard/parser",
    ],
)
