load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "dashboard_fields",
    srcs = glob(["*.py"]),
    data = ["//resources/file_formats:upn_edi_imp.json"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/json",
        "//src/main/file_system",
    ],
)
