load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "mapping",
    srcs = glob(["*.py"]),
    data = [
        "//resources/forward_office/package_types:cargo_type_mappings.json",
        "//resources/forward_office/priority_codes:upn.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight",
    ],
)
