load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "mapping",
    srcs = glob(["*.py"]),
    data = [
        "//resources/forward_office/package_types",
        "//resources/forward_office/priority_codes",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight",
    ],
)
