load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "cargo",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight/cargo/container",
        "//src/main/freight/cargo/entries",
        "//src/main/freight/cargo/packages",
    ],
)
