load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "consignment",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight/address",
        "//src/main/freight/cargo",
        "//src/main/freight/reference",
        "//src/main/freight/service",
        "//src/main/freight/dates"
    ],
)
