load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "service",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight/service/booked",
        "//src/main/freight/service/main",
        "//src/main/freight/service/premium",
    ],
)
