load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "date",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/freight/shipment_dates/date/implementation",
        "//src/main/freight/shipment_dates/date/interface",
        "//src/main/freight/shipment_dates/date/model",
    ],
)
