load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "dates",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/time/dates/comparison",
        "//src/main/time/dates/factory",
        "//src/main/time/dates/formats",
        "//src/main/time/dates/implementation",
        "//src/main/time/dates/interface",
    ],
)
