load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "api",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/upn/api/client",
        "//src/main/upn/api/data_structures",
        "//src/main/upn/api/data_types",
    ],
)
