load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "consignment",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/upn/consignment/adaptors",
        "//src/main/upn/consignment/address",
        "//src/main/upn/consignment/cargo",
        "//src/main/upn/consignment/customer",
        "//src/main/upn/consignment/dates",
        "//src/main/upn/consignment/references",
        "//src/main/upn/consignment/services",
    ],
)
