load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "freight",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/upn/freight/address",
        "//src/main/upn/freight/cargo",
        "//src/main/upn/freight/customer",
        "//src/main/upn/freight/dates",
        "//src/main/upn/freight/references",
        "//src/main/upn/freight/services",
    ],
)
