load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "formats",
    srcs = glob(["*.py"]),
    data = ["//resources/test_inputs:simple_scenario.csv"],
    deps = [
        "//src/main/forward_office/dashboard",
    ],
)

py_test(
    name = "cargo_type_mappings",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/forward_office/dashboard",
    ],
)
