load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "cargo",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/forward_office/mapping",
    ],
)

py_test(
    name = "service",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/forward_office/mapping",
    ],
)
