load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "cargo",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/cargo",
        "//src/main/file_system",
    ],
)

py_test(
    name = "package_types",
    srcs = glob(["*.py"]),
    data = ["//resources/cargo_types:base_packages.json"],
    deps = [
        "//src/main/freight/cargo",
        "//src/main/file_system",
    ],
)

py_test(
    name = "oversize_options",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/cargo",
        "//src/main/file_system",
    ],
)