load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "entry",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/cargo",
    ],
)

py_test(
    name = "package_types",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/cargo",
    ],
)

py_test(
    name = "oversize_options",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/cargo",
    ],
)

