load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "reference",
    srcs = glob(["*.py"]),
    data = ["//resources/test_inputs:simple_scenario.csv"],
    deps = [
        "//src/main/freight/consignment",
        "//src/main/file_system",
    ],
)

py_test(
    name = "address",
    srcs = glob(["*.py"]),
    data = [],
    deps = [
        "//src/main/freight/consignment",
        "//src/main/file_system",
    ],
)
